--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -81,9 +81,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:max="18"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
+        android:max="18"
         android:progressTint="@color/colorPrimary"
         android:thumbTint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
@@ -109,5 +109,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/logout_progress_spinner"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/logout_button"
+        app:layout_constraintEnd_toEndOf="@id/logout_button"
+        app:layout_constraintStart_toStartOf="@id/logout_button"
+        app:layout_constraintTop_toTopOf="@id/logout_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
