--- a/app/src/main/res/layout/fragment_person_detail.xml
+++ b/app/src/main/res/layout/fragment_person_detail.xml
@@ -9,132 +9,152 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/map_fragment_person_detail"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:context="com.fightcovid.main.fragments.MapFragment" />
-
-        <TextView
-            android:id="@+id/last_visited_label"
-            style="@style/NormalText"
+        <androidx.core.widget.ContentLoadingProgressBar
+            android:id="@+id/person_detail_progress_spinner"
+            style="?android:attr/progressBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/last_visited"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/map_fragment_person_detail"
-            tools:text="Last visited:" />
-
-        <TextView
-            android:id="@+id/last_visited_value"
-            style="@style/DescriptionText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            app:layout_constraintBottom_toBottomOf="@id/last_visited_label"
-            app:layout_constraintStart_toEndOf="@id/last_visited_label"
-            tools:text="24th March 2020" />
-
-        <TextView
-            android:id="@+id/address_label"
-            style="@style/NormalText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="@string/address_label"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/last_visited_label" />
-
-        <TextView
-            android:id="@+id/address_value"
-            style="@style/DescriptionText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="@id/address_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/address_label"
-            app:layout_constraintTop_toTopOf="@id/address_label"
-            tools:text="Cara Lazara 87/14" />
-
-        <TextView
-            android:id="@+id/required_label"
-            style="@style/NormalText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="@string/notes"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/address_label" />
-
-        <TextView
-            android:id="@+id/notes_value"
-            style="@style/DescriptionText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="@id/required_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/required_label"
-            app:layout_constraintTop_toTopOf="@id/required_label" />
-
-        <TextView
-            android:id="@+id/last_visit_comment_label"
-            style="@style/NormalText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="22dp"
-            android:text="@string/volunteer_who_visited_this_person_last_wrote"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/required_label"
-            tools:text="Volunteer who visited this person last wrote:" />
-
-        <TextView
-            android:id="@+id/last_visit_comment_value"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_margin="12dp"
-            android:background="@drawable/bubble_text"
-            android:padding="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/last_visit_comment_label"
-            tools:text="Baba i deda su u redu, sve cool. Potrebno im je to to to to i to" />
-
-        <TextView
-            android:id="@+id/view_all_feedbacks"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:drawableStart="@drawable/ic_comment_purple_24dp"
-            android:focusable="true"
-            android:gravity="center"
-            android:text="@string/view_all_feedback"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/last_visit_comment_value" />
-
-        <Button
-            android:id="@+id/button_person_visited"
-            style="@style/PrimaryButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:text="@string/create_visit"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_all_feedbacks" />
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/person_detail_constraint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/map_fragment_person_detail"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:context="com.fightcovid.main.fragments.MapFragment" />
+
+            <TextView
+                android:id="@+id/last_visited_label"
+                style="@style/NormalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/last_visited"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/map_fragment_person_detail"
+                tools:text="Last visited:" />
+
+            <TextView
+                android:id="@+id/last_visited_value"
+                style="@style/DescriptionText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                app:layout_constraintBottom_toBottomOf="@id/last_visited_label"
+                app:layout_constraintStart_toEndOf="@id/last_visited_label"
+                tools:text="24th March 2020" />
+
+            <TextView
+                android:id="@+id/address_label"
+                style="@style/NormalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="@string/address_label"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/last_visited_label" />
+
+            <TextView
+                android:id="@+id/address_value"
+                style="@style/DescriptionText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintBottom_toBottomOf="@id/address_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/address_label"
+                app:layout_constraintTop_toTopOf="@id/address_label"
+                tools:text="Cara Lazara 87/14" />
+
+            <TextView
+                android:id="@+id/required_label"
+                style="@style/NormalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="@string/notes"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/address_label" />
+
+            <TextView
+                android:id="@+id/notes_value"
+                style="@style/DescriptionText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintBottom_toBottomOf="@id/required_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/required_label"
+                app:layout_constraintTop_toTopOf="@id/required_label" />
+
+            <TextView
+                android:id="@+id/last_visit_comment_label"
+                style="@style/NormalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="22dp"
+                android:text="@string/volunteer_who_visited_this_person_last_wrote"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/required_label"
+                tools:text="Volunteer who visited this person last wrote:" />
+
+            <TextView
+                android:id="@+id/last_visit_comment_value"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_margin="12dp"
+                android:background="@drawable/bubble_text"
+                android:padding="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/last_visit_comment_label"
+                tools:text="Baba i deda su u redu, sve cool. Potrebno im je to to to to i to" />
+
+            <TextView
+                android:id="@+id/view_all_feedbacks"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:drawableStart="@drawable/ic_comment_purple_24dp"
+                android:focusable="true"
+                android:gravity="center"
+                android:text="@string/view_all_feedback"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/last_visit_comment_value" />
+
+            <Button
+                android:id="@+id/button_person_visited"
+                style="@style/PrimaryButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:text="@string/create_visit"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/view_all_feedbacks" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
